{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 18,
  "lineage": "5ae11996-5fbc-73b3-9d37-b263fbaea145",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myEc2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0776c814353b4814d",
            "arn": "arn:aws:ec2:eu-west-1:524339405707:instance/i-09119520ac6ae4417",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09119520ac6ae4417",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fastapiapp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0adfffd685babd09f",
            "private_dns": "ip-10-0-0-44.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.44",
            "public_dns": "ec2-34-251-131-130.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.251.131.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-020b3f123f98d5513",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03b7c1b8c05f20ed3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cc8cf3b08360792",
            "tags": {
              "Name": "fastapi_app-ec2-instance"
            },
            "tags_all": {
              "Name": "fastapi_app-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b7c1b8c05f20ed3"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_app_key",
            "aws_security_group.my_app_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.all_apps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "apps-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:524339405707:internet-gateway/igw-0821094bf2c5253c6",
            "id": "igw-0821094bf2c5253c6",
            "owner_id": "524339405707",
            "tags": {
              "Name": "fastapi_app-igw"
            },
            "tags_all": {
              "Name": "fastapi_app-igw"
            },
            "vpc_id": "vpc-001b45918264f592d"
          },
          "dependencies": [
            "aws_vpc.all_apps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:524339405707:route-table/rtb-05f7877655d9c60ac",
            "id": "rtb-05f7877655d9c60ac",
            "owner_id": "524339405707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0821094bf2c5253c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fastapi_app-public-route"
            },
            "tags_all": {
              "Name": "fastapi_app-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-001b45918264f592d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.apps-igw",
            "aws_vpc.all_apps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098b68b2caad7f4d7",
            "route_table_id": "rtb-05f7877655d9c60ac",
            "subnet_id": "subnet-07cc8cf3b08360792"
          },
          "dependencies": [
            "aws_internet_gateway.apps-igw",
            "aws_route_table.route_public",
            "aws_subnet.public_subnet",
            "aws_vpc.all_apps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:524339405707:security-group/sg-03b7c1b8c05f20ed3",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b7c1b8c05f20ed3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "91.130.2.122/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fastapi_app-sg20241216224252000000000001",
            "name_prefix": "fastapi_app-sg",
            "owner_id": "524339405707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fastapi_app-sec-gw"
            },
            "tags_all": {
              "Name": "fastapi_app-sec-gw"
            },
            "timeouts": null,
            "vpc_id": "vpc-001b45918264f592d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.all_apps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:524339405707:subnet/subnet-07cc8cf3b08360792",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc8cf3b08360792",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "524339405707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fastapi_app-public-subnet"
            },
            "tags_all": {
              "Name": "fastapi_app-public-subnet"
            },
            "vpc_id": "vpc-001b45918264f592d"
          },
          "dependencies": [
            "aws_vpc.all_apps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "all_apps_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:524339405707:vpc/vpc-001b45918264f592d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa43860d2efb8e5e",
            "default_route_table_id": "rtb-0adf841131c4e4cc1",
            "default_security_group_id": "sg-03db30b9a58e36c06",
            "dhcp_options_id": "dopt-0db4349eb0739c8db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001b45918264f592d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adf841131c4e4cc1",
            "owner_id": "524339405707",
            "tags": {
              "Name": "fastapi_app-VPC"
            },
            "tags_all": {
              "Name": "fastapi_app-VPC"
            }
          }
        }
      ]
    }
  ]
}